menambahkan reset.css dan styles.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Pigeon Photography</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rock+Salt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -39,12 +40,17 @@
 
         </div>
     </header>
+
+    <!-- HERO IMAGE SECTION -->
     <div id="hero-image">
         <div class="overlay">
             <h2 class="tag-line">CAPTURING THE IMAGINATION</h2>
         </div>
     </div>
+
+    <!-- BACK TO TOP BUTTON -->
     <a href="#body" id="topButton" title="Go to Top">Top</a>
+    <!-- OUR STORY SECTION -->
     <section id="#our-story">
         <div class="container">
             <h3>Our Story</h3>
@@ -52,14 +58,132 @@
             </p>
         </div>
     </section>
+
+    <!-- GALLERY SECTION -->
     <section id="gallery">
         <div class="container">
             <h3>Gallery</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aspernatur vel sequi consectetur molestiae consequuntur! Maiores molestiae quas sit suscipit aut qui, hic est quasi recusandae, saepe harum aspernatur odit.
             </p>
+            <div id="gallery-wrapper">
+                <div class="gallery-row">
+                    <div class="gallery-item">
+                        <div>
+                            <img src="https://picsum.photos/id/491/200/300" alt="Gallery item 1">
+                        </div>
+                        <p>Image Title</p>
+                    </div>
+                    <div class="gallery-item">
+                        <div>
+                            <img src="https://picsum.photos/id/239/200/300" alt="Gallery item 2">
+                        </div>
+                        <p>Image Title</p>
+                    </div>
+                    <div class="gallery-item">
+                        <div>
+                            <img src="https://picsum.photos/id/443/200/300" alt="Gallery item 3">
+                        </div>
+                        <p>Image Title</p>
+                    </div>
+                </div>
+                <div class="gallery-row">
+                    <div class="gallery-item">
+                        <div>
+                            <img src="https://picsum.photos/id/299/200/300" alt="Gallery item 4">
+                        </div>
+                        <p>Image Title</p>
+                    </div>
+                    <div class="gallery-item">
+                        <div>
+                            <img src="https://picsum.photos/id/257/200/300" alt="Gallery item 5">
+                        </div>
+                        <p>Image Title</p>
+                    </div>
+                    <div class="gallery-item">
+                        <div>
+                            <img src="https://picsum.photos/id/56/200/300" alt="Gallery item 6">
+                        </div>
+                        <p>Image Title</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
+
+    <!-- EVENTS SECTION -->
+    <section id="events">
+        <div class="container">
+            <h3>Upcoming Events</h3>
+            <table id="upcoming-events-table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Event</th>
+                        <th>Location</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>10/21/2019</td>
+                        <td>Galeri terbuka</td>
+                        <td>Pekanbaru,Riau</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima reprehenderit iure officiis odio. Enim minus eum rerum eaque repudiandae dolor velit iusto, explicabo nam dignissimos officiis voluptas repellendus illo odio.</td>
+                    </tr>
+                    <tr>
+                        <td>09/11/2020</td>
+                        <td>Galeri Amazing</td>
+                        <td>Jakarta,DKI Jakarta</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima reprehenderit iure officiis odio. Enim minus eum rerum eaque repudiandae dolor velit iusto, explicabo nam dignissimos officiis voluptas repellendus illo odio.</td>
+                    </tr>
+                    <tr>
+                        <td>01/29/2021</td>
+                        <td>Galeri Buaya</td>
+                        <td>Surabaya,Jawa Timur</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima reprehenderit iure officiis odio. Enim minus eum rerum eaque repudiandae dolor velit iusto, explicabo nam dignissimos officiis voluptas repellendus illo odio.</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </section>
+
+    <!-- CONTACTS SECTION -->
+    <section id="contact">
+        <div class="container">
+            <h3>Contact us</h3>
+            <p>
+                Please send any comments, questions, or feedback with the form below.
+            </p>
+            <form action="https://mailthis.to/m.farhan2906@gmail.com" method="POST">
+                <fieldset>
+                    <input type="text" name="name" placeholder="Enter your name...">
+                    <input type="email" name="_replyto" placeholder="Enter your email...">
+                    <textarea name="message" placeholder="Enter your message..."></textarea>
+                    <button>Send</button>
+                    <input type="hidden" name="_confirmation" value="Your form has been submitted">
+                </fieldset>
+            </form>
+        </div>
+    </section>
+
+    <!-- FOOTER SECTION -->
+    <footer>
+        <div class="footer-container">
+            <nav class="menu-wrapper">
+                <ul id="footer-menu">
+                    <li class="menu-item"><a href="">Privacy Policy</a></li>
+                    <li class="menu-item"><a href="">Legal</a></li>
+                    <li class="menu-item"><a href="">Sponsors</a></li>
+                </ul>
+            </nav>
+            <div id="copyright">
+                &copy; Copyright - Blue Pigeon Photography - All Rights Reserved.
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
