menambahkan css dan javascript untuk memunculkan tombol topButton

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rock+Salt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="js/main.js"></script>
 </head>
 
 <body id="body">
@@ -22,16 +23,16 @@
             <nav class="menu-wrapper">
                 <ul id="main-menu">
                     <li class="menu-item">
-                        <a href="#">Our Story</a>
+                        <a href="#our-story">Our Story</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#">Gallery</a>
+                        <a href="#gallery">Gallery</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#">Events</a>
+                        <a href="#events">Events</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
 
                 </ul>
@@ -51,7 +52,7 @@
     <!-- BACK TO TOP BUTTON -->
     <a href="#body" id="topButton" title="Go to Top">Top</a>
     <!-- OUR STORY SECTION -->
-    <section id="#our-story">
+    <section id="our-story">
         <div class="container">
             <h3>Our Story</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex accusantium porro rem nulla minus repudiandae iste voluptas officia. Magnam voluptatibus enim vitae aspernatur quo dolorem, et earum consequuntur minus itaque.
@@ -70,19 +71,19 @@
                 <div class="gallery-row">
                     <div class="gallery-item">
                         <div>
-                            <img src="https://picsum.photos/id/491/200/300" alt="Gallery item 1">
+                            <img src="https://picsum.photos/id/491/300/200" alt="Gallery item 1">
                         </div>
                         <p>Image Title</p>
                     </div>
                     <div class="gallery-item">
                         <div>
-                            <img src="https://picsum.photos/id/239/200/300" alt="Gallery item 2">
+                            <img src="https://picsum.photos/id/239/300/200" alt="Gallery item 2">
                         </div>
                         <p>Image Title</p>
                     </div>
                     <div class="gallery-item">
                         <div>
-                            <img src="https://picsum.photos/id/443/200/300" alt="Gallery item 3">
+                            <img src="https://picsum.photos/id/443/300/200" alt="Gallery item 3">
                         </div>
                         <p>Image Title</p>
                     </div>
@@ -90,19 +91,19 @@
                 <div class="gallery-row">
                     <div class="gallery-item">
                         <div>
-                            <img src="https://picsum.photos/id/299/200/300" alt="Gallery item 4">
+                            <img src="https://picsum.photos/id/299/300/200" alt="Gallery item 4">
                         </div>
                         <p>Image Title</p>
                     </div>
                     <div class="gallery-item">
                         <div>
-                            <img src="https://picsum.photos/id/257/200/300" alt="Gallery item 5">
+                            <img src="https://picsum.photos/id/257/300/200" alt="Gallery item 5">
                         </div>
                         <p>Image Title</p>
                     </div>
                     <div class="gallery-item">
                         <div>
-                            <img src="https://picsum.photos/id/56/200/300" alt="Gallery item 6">
+                            <img src="https://picsum.photos/id/56/300/200" alt="Gallery item 6">
                         </div>
                         <p>Image Title</p>
                     </div>
@@ -184,6 +185,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
